--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -5,13 +5,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.heiwait</groupId>
-        <artifactId>tripagency</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <groupId>{{project_namespace}}</groupId>
+        <artifactId>{{project_name}}</artifactId>
+        <version>{{project_version}}</version>
     </parent>
 
     <artifactId>domain</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>{{project_version}}</version>
     <packaging>jar</packaging>
 
     <dependencies>
