--- a/domain/src/test/resources/junit-platform.properties
+++ b/domain/src/test/resources/junit-platform.properties
@@ -1,2 +1,2 @@
-cucumber.glue=com.heiwait.tripagency.domain.cucumber.steps
-cucumber.plugin=json:build/cucumber/TripAgency.json, html:build/cucumber/TripAgency.html, pretty
+cucumber.glue={{project_namespace}}.{{project_name}}.domain.cucumber.steps
+cucumber.plugin=json:build/cucumber/{{project_name}}.json, html:build/cucumber/{{project_name}}.html, pretty
