--- a/e2e/src/test/resources/junit-platform.properties
+++ b/e2e/src/test/resources/junit-platform.properties
@@ -1,2 +1,2 @@
-cucumber.glue=com.heiwait.tripagency.e2e.cucumber.steps
-cucumber.plugin=json:build/cucumber/TripAgency.json, html:build/cucumber/TripAgency.html, pretty
+cucumber.glue={{project_namespace}}.{{project_name}}.e2e.cucumber.steps
+cucumber.plugin=json:build/cucumber/{{project_name}}.json, html:build/cucumber/{{project_name}}.html, pretty
